--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,7 +27,7 @@
     </head>
     <body>
         <header>
-            <h1>Riverbend Chamber of Commerce</h1>
+            <div class="logo">Riverbend Chamber of Commerce</div>
             <nav>
                 <ul id="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -40,6 +40,7 @@
             </nav>
         </header>
         <main class="form-container">
+            <h1>Welcome to the Riverbend Chamber of Commerce</h1>
             <h2>Join the Chamber</h2>
             <form method="get" action="thankyou.html">
                 <label>
