--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -24,23 +24,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/base.css">
+        <link rel="stylesheet" href="styles/join.css">
         <!-- JS -->
         <script src="scripts/join.js" defer></script>
     </head>
     <body>
         <header>
+
             <h1>Riverbend Chamber of Commerce</h1>
             <nav>
-                <ul id="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="directory.html">Directory</a></li>
-                    <li><a href="join.html" aria-current="page">Join</a></li>
-                    <li><a href="discover.html">Discover</a></li>
-                    <li><a href="index.html">Events</a></li>
-                    <li><a href="join.html">About Us</a></li>
-                </ul>
+                <a href="index.html">Home</a>
+                <a href="directory.html">Directory</a>
+                <a href="join.html" class="active">Join</a>
+                <a href="discover.html">Discover</a>
             </nav>
         </header>
 
