--- a/finalproject/site.html
+++ b/finalproject/site.html
@@ -67,7 +67,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy; <span id="year"></span> Riverbend Chamber | Ikechukwu Kelvin Chichi | WDD 231</p>
+      <p>&copy; <span id="year"></span> Riverbend Trails | Ikechukwu Kelvin Chichi | WDD 231</p>
       <p id="lastModified"></p>
       <p>Contact us: ichichi@byupathway.edu | (234) 7033725224</p>
     </footer>
