--- a/finalproject/about.html
+++ b/finalproject/about.html
@@ -41,6 +41,36 @@
     <main>
       <h1>About</h1>
       <p>This project demonstrates responsive, accessible front-end skills using HTML, CSS and JavaScript.</p>
+      <section>
+  <h2>About Us</h2>
+  <p>
+    <strong>Riverbend Trails</strong> was created to celebrate the natural beauty and 
+    recreational opportunities of the Riverbend area. Our mission is to make it easy 
+    for locals and visitors to discover hiking and biking trails that fit their interests 
+    and needs.  
+  </p>
+  <p>
+    We are committed to promoting outdoor exploration, healthy living, and 
+    environmental stewardship. By providing accurate trail information, engaging 
+    features, and a user-friendly design, we aim to encourage families, adventurers, 
+    and nature lovers to connect with the outdoors.
+  </p>
+</section>
+
+<section>
+  <h2>Objectives</h2>
+  <ul>
+    <li>Provide clear and accessible information about local trails, including 
+        distance, difficulty, and features.</li>
+    <li>Encourage safe, enjoyable, and sustainable use of hiking and biking trails.</li>
+    <li>Promote outdoor recreation as a way to support community health and well-being.</li>
+    <li>Create a platform that demonstrates modern web development principles, 
+        including responsive design, accessibility, and dynamic content.</li>
+    <li>Offer visitors ways to connect with us for feedback, questions, or community 
+        events related to Riverbend Trails.</li>
+  </ul>
+</section>
+
       <h2>Project Requirements Checklist</h2>
       <ul>
         <li>3 pages + form action page</li>
