--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,24 +1,19 @@
-<!-- File: chamber/discover.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Riverbend — Riverbend Chamber of Commerce</title>
     <meta name="description" content="Discover attractions, businesses and places of interest in Riverbend.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
-
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/discover.css">
     <link rel="stylesheet" href="styles/medium.css">
-
     <script src="scripts/discover.js" defer></script>
   </head>
   <body>
@@ -30,8 +25,8 @@
           <li><a href="directory.html">Directory</a></li>
           <li><a href="join.html">Join</a></li>
           <li><a href="discover.html" class="active">Discover</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="directory.html">Events</a></li>
+          <li><a href="discover.html">About Us</a></li>
         </ul>
       </nav>
     </header>
