--- a/finalproject/siteplan.html
+++ b/finalproject/siteplan.html
@@ -20,9 +20,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/site.css">
+    <link rel="stylesheet" href="styles/siteplan.css">
     <!-- JS -->
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/siteplan.js" defer></script>
   </head>
   <body>
     <header>
