--- a/finalproject/about.html
+++ b/finalproject/about.html
@@ -1,87 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riverbend Trails</title>
-    <meta name="description" content="About Riverbend Trails and the project's motivations.">
+    <title>About Riverbend Trails — Riverbend Trails</title>
+    <meta name="description" content="Discover attractions, businesses and places of interest in Riverbend.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
 
-    <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
-    <!-- Open Graph Meta for Facebook -->
-    <meta property="og:title" content="Riverbend Trails">
-    <meta property="og:description" content="Find local businesses and members of the Riverbend Trails.">
-    <meta property="og:image" content="https://ikechukwukelvin.github.io/wdd231/finalproject/images/chamber-logo.jpg">
-    <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/finalproject/index.html">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Riverbend Trails">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="styles/styles.css">
-
-    <!-- JS -->
+    <link rel="stylesheet" href="styles/about.css">
+    <link rel="stylesheet" href="styles/site.css">
     <script src="scripts/main.js" defer></script>
-    <script type="module" src="scripts/modal.js"></script>
+    <script src="scripts/about.js" defer></script>
   </head>
   <body>
-    <header class="site-header">
-      <div class="brand">
-        <img src="images/logo.svg" alt="Riverbend Trails logo" class="logo" />
-        <a href="index.html" class="site-title">Riverbend Trails</a>
-      </div>
+    <header>
+      <h1>Riverbend Trails</h1>
+      <nav>
+        <button id="menuToggle">☰</button>
+        <ul id="navMenu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="trails.html">Trails</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html" class="active">About Us</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <main>
-      <h1>About</h1>
-      <p>This project demonstrates responsive, accessible front-end skills using HTML, CSS and JavaScript.</p>
+    <main class="About Us-page">
+      <h1>About Us</h1>
+      <p>
+        <strong>Riverbend Trails</strong> was created to celebrate the natural beauty and 
+        recreational opportunities of the Riverbend area. Our mission is to make it easy 
+        for locals and visitors to discover hiking and biking trails that fit their interests 
+        and needs.  
+      </p>
+      <p>
+        We are committed to promoting outdoor exploration, healthy living, and 
+        environmental stewardship. By providing accurate trail information, engaging 
+        features, and a user-friendly design, we aim to encourage families, adventurers, 
+        and nature lovers to connect with the outdoors.
+      </p>
+      </section>
+
       <section>
-  <h2>About Us</h2>
-  <p>
-    <strong>Riverbend Trails</strong> was created to celebrate the natural beauty and 
-    recreational opportunities of the Riverbend area. Our mission is to make it easy 
-    for locals and visitors to discover hiking and biking trails that fit their interests 
-    and needs.  
-  </p>
-  <p>
-    We are committed to promoting outdoor exploration, healthy living, and 
-    environmental stewardship. By providing accurate trail information, engaging 
-    features, and a user-friendly design, we aim to encourage families, adventurers, 
-    and nature lovers to connect with the outdoors.
-  </p>
-</section>
+        <h2>Objectives</h2>
+        <ul>
+          <li>Provide clear and accessible information about local trails, including distance, 
+            difficulty, and features.</li>
+          <li>Encourage safe, enjoyable, and sustainable use of hiking and biking trails.</li>
+          <li>Promote outdoor recreation as a way to support community health and well-being.</li>
+          <li>Create a platform that demonstrates modern web development principles, 
+            including responsive design, accessibility, and dynamic content.</li>
+          <li>Offer visitors ways to connect with us for feedback, questions, or community 
+            events related to Riverbend Trails.</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Project Requirements Checklist</h2>
+        <ul>
+          <li>3 pages + form action page</li>
+          <li>Fetch local JSON, dynamic items (15+), template literals, ES Modules</li>
+          <li>Modal dialog, localStorage, responsive nav</li>
+        </ul>
+      </section>
+      
 
-<section>
-  <h2>Objectives</h2>
-  <ul>
-    <li>Provide clear and accessible information about local trails, including 
-        distance, difficulty, and features.</li>
-    <li>Encourage safe, enjoyable, and sustainable use of hiking and biking trails.</li>
-    <li>Promote outdoor recreation as a way to support community health and well-being.</li>
-    <li>Create a platform that demonstrates modern web development principles, 
-        including responsive design, accessibility, and dynamic content.</li>
-    <li>Offer visitors ways to connect with us for feedback, questions, or community 
-        events related to Riverbend Trails.</li>
-  </ul>
-</section>
-
-      <h2>Project Requirements Checklist</h2>
-      <ul>
-        <li>3 pages + form action page</li>
-        <li>Fetch local JSON, dynamic items (15+), template literals, ES Modules</li>
-        <li>Modal dialog, localStorage, responsive nav</li>
-      </ul>
+      <!-- Visitor overlay modal -->
+      <div id="visitor-overlay" class="visitor-overlay" role="dialog" aria-live="polite" aria-modal="true">
+        <div class="visitor-box">
+          <button id="close-visit-msg" class="close-btn" aria-label="Close">✕</button>
+          <p id="visit-text">Welcome!</p>
+        </div>
+      </div>
     </main>
 
-    <footer class="site-footer">
-      <p>&copy; <span id="year3"></span> Riverbend Trails</p>
-      <p><a href="video_demo_link.txt">Video demo (see README)</a> | <a href="attributions.html">Attributions</a></p>
+    <footer>
+      <p>&copy; <span id="year"></span> Riverbend Chamber | Ikechukwu Kelvin Chichi | WDD 231</p>
+      <p id="lastModified"></p>
+      <p>Contact us: ichichi@byupathway.edu | (234) 7033725224</p>
     </footer>
   </body>
 </html>
