--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -3,74 +3,53 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riverbend Trails</title>
-    <meta name="description" content="Official business member directory for the Riverbend Trails.">
+    <title>Riverbend Trails — Home</title>
+    <meta name="description" content="Discover hiking and biking trails in Riverbend Trails.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
-
-    <!-- Favicon -->
-    <link rel="icon" href="finalproject/images/favicon.ico" type="image/x-icon">
-
-    <!-- Open Graph Meta for Facebook -->
-    <meta property="og:title" content="Riverbend Trails">
-    <meta property="og:description" content="Find local businesses and members of the Riverbend Trails.">
-    <meta property="og:image" content="https://ikechukwukelvin.github.io/wdd231/finalproject/images/chamber-logo.jpg">
-    <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/finalproject/index.html">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Riverbend Trails">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="styles.css">
-
-    <!-- JS -->
-    <script type="module" src="js/main.js"></script>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/about.css">
+    <link rel="stylesheet" href="styles/site.css">
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/about.js" defer></script>
   </head>
-<body>
-  <header class="site-header">
-    <div class="brand">
-      <img src="images/logo.svg" alt="Riverbend Trails logo" class="logo" />
-      <a href="index.html" class="site-title">Riverbend Trails</a>
-    </div>
-    <button id="menu-toggle" aria-expanded="false" aria-controls="primary-nav" class="hamburger" aria-label="Open menu">
-      ☰
-    </button>
-    <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Main navigation">
-      <ul>
-        <li><a href="index.html" aria-current="page">Home</a></li>
-        <li><a href="trails.html">Trails</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main id="main">
-    <section class="hero">
-      <h1>Find your next walk in Riverbend</h1>
-      <p>Curated trails, events, and outdoor tips for the local community.</p>
-      <a class="cta" href="trails.html">Browse Trails</a>
-    </section>
-
-    <section aria-labelledby="highlights">
-      <h2 id="highlights">Highlights</h2>
-      <div class="cards" id="highlights-list" aria-live="polite">
-        <!-- Dynamic content from JS -->
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <p>&copy; <span id="year"></span> Riverbend Trails — Ikechukwu Kelvin</p>
-    <p><a href="video_demo_link.txt" id="video-link">Video demo (see README)</a> | <a href="attributions.html">Attributions</a></p>
-  </footer>
-
-  <dialog id="modal" class="modal" aria-hidden="true">
-    <button id="close-modal" aria-label="close dialog">Close</button>
-    <div id="modal-content"></div>
-  </dialog>
-</body>
+  <body>
+    <header>
+      <h1>Riverbend Trails</h1>
+      <nav>
+        <button id="menuToggle">☰</button>
+        <ul id="navMenu">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="trails.html">Trails</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Welcome to Riverbend Trails</h2>
+        <p>Explore nature, hiking, and biking in Riverbend. Find detailed trail data, discover the best routes, and connect with us for updates.</p>
+      </section>
+      <section class="hero">
+        <h1>Find your next walk in Riverbend</h1>
+        <p>Curated trails, events, and outdoor tips for the local community.</p>
+        <a class="cta" href="trails.html">Browse Trails</a>
+      </section>
+      <section id="index-grid" class="index-grid" aria-label="Places of interest">
+        <h2 id="highlights">Highlights</h2>
+        <div class="cards" id="highlights-list" aria-live="polite">
+          <!-- Dynamic content from JS -->
+        </div>
+      </section>
+        <!-- Grid of cards laid out using grid-template-areas -->
+        <section id="about-grid" class="about-grid" aria-label="Places of interest">
+        <!-- Cards injected here by discover.js -->
+        </section>
+    </main>
+    <footer>
+      <p>&copy; <span id="year"></span> Riverbend Trails | Ikechukwu Kelvin Chichi | WDD 231</p>
+      <p id="lastModified"></p>
+      <p><a href="attributions.html">Attributions</a> | <a href="https://youtube.com/yourvideo" target="_blank">Project Video</a></p>
+    </footer>
+  </body>
 </html>
