--- a/finalproject/trails.html
+++ b/finalproject/trails.html
@@ -3,87 +3,44 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riverbend Trails</title>
-    <meta name="description" content="Browse the Riverbend trail directory with filters and details.">
+    <title>Riverbend Trails — Trails</title>
+    <meta name="description" content="Explore trail data dynamically at Riverbend Trails.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
-
-    <!-- Favicon -->
-    <link rel="icon" href="finalproject/images/favicon.ico" type="image/x-icon">
-
-    <!-- Open Graph Meta for Facebook -->
-    <meta property="og:title" content="Riverbend Trails">
-    <meta property="og:description" content="Find local businesses and members of the Riverbend Trails.">
-    <meta property="og:image" content="https://ikechukwukelvin.github.io/wdd231/finalproject/images/chamber-logo.jpg">
-    <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/finalproject/index.html">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Riverbend Trails">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="styles/styles.css">
-
-    <!-- JS -->
-    <script src="scripts/trails.js" defer></script>
-    <script type="module" src="scripts/modal.js"></script>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/finalproject/styles/site.css">
+    <script src="/finalproject/scripts/trails.js" type="module" defer></script>
   </head>
   <body>
-    <header class="site-header">
-      <div class="brand">
-        <img src="images/logo.svg" alt="Riverbend Trails logo" class="logo" />
-        <a href="index.html" class="site-title">Riverbend Trails</a>
-      </div>
-      <button id="menu-toggle-2" aria-expanded="false" aria-controls="primary-nav" class="hamburger" aria-label="Open menu">
-        ☰
-      </button>
-      <nav id="primary-nav-2" class="primary-nav" role="navigation" aria-label="Main navigation">
-        <ul>
+    <header>
+      <h1>Riverbend Trails</h1>
+      <nav>
+        <button id="menuToggle">☰</button>
+        <ul id="navMenu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="trails.html" aria-current="page">Trails</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="trails.html" class="active">Trails</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
     </header>
+
     <main>
-      <h1>Trail Directory</h1>
-      <div class="controls">
-        <label for="search">Search trails</label>
-        <input id="search" type="search" placeholder="Search by name or difficulty" />
-        <label for="difficulty">Difficulty</label>
-        <select id="difficulty">
-          <option value="">All</option>
-          <option>Easy</option>
-          <option>Moderate</option>
-          <option>Hard</option>
-        </select>
+      <h2>Available Trails</h2>
+      <section id="trailsContainer" class="grid"></section>
+
+      <!-- Modal -->
+      <div id="trailModal" class="modal hidden">
+        <div class="modal-content">
+          <span id="closeModal">&times;</span>
+          <div id="modalDetails"></div>
+        </div>
       </div>
-
-      <section id="trails-list" class="grid" aria-live="polite">
-        <!-- dynamic trail cards -->
-      </section>
-
-      <template id="trail-template">
-        <article class="card trail-card">
-          <img alt="" class="thumb" loading="lazy" />
-          <h3 class="trail-name"></h3>
-          <p class="trail-desc"></p>
-          <p class="trail-meta"></p>
-          <button class="details-btn">Details</button>
-        </article>
-      </template>
     </main>
-    <footer class="site-footer">
-      <p>&copy; <span id="year2"></span> Riverbend Trails</p>
-      <p><a href="video_demo_link.txt">Video demo (see README)</a> | <a href="attributions.html">Attributions</a></p>
-    </footer>
 
-    <dialog id="modal-trail" class="modal" aria-hidden="true">
-      <button id="close-modal-trail" aria-label="close dialog">Close</button>
-      <div id="modal-trail-content"></div>
-    </dialog>
+    <footer>
+      <p>&copy; <span id="year"></span> Riverbend Trails | Ikechukwu Kelvin Chichi</p>
+      <p id="lastModified"></p>
+      <p><a href="attributions.html">Attributions</a> | <a href="https://youtube.com/yourvideo" target="_blank">Project Video</a></p>
+    </footer>
   </body>
 </html>
