--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,14 +6,26 @@
     <title>Discover Riverbend — Riverbend Chamber of Commerce</title>
     <meta name="description" content="Discover attractions, businesses and places of interest in Riverbend.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="chamber/images/favicon.ico" type="image/x-icon">
+
+    <!-- Open Graph Meta for Facebook -->
+    <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
+    <meta property="og:description" content="Find local businesses and members of the Riverbend Chamber.">
+    <meta property="og:image" content="https://ikechukwukelvin.github.io/wdd231/chamber/images/chamber-logo.jpg">
+    <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/chamber/directory.html">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Riverbend Chamber of Commerce Directory">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles/discover.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/discover.css">
-    <link rel="stylesheet" href="styles/medium.css">
     <script src="scripts/discover.js" defer></script>
   </head>
   <body>
