--- a/finalproject/attribution.html
+++ b/finalproject/attribution.html
@@ -6,6 +6,21 @@
     <title>Riverbend Trails — Attributions</title>
     <meta name="description" content="Attributions and credits for resources used on the Riverbend Trails website.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Open Graph Meta for Facebook -->
+    <meta property="og:title" content="Riverbend Trails contact">
+    <meta property="og:description" content="Contact Riverbend Trails for questions or feedback.">
+    <meta property="og:image" content="https://ikechukwukelvin.github.io/wdd231/finalproject/images/logo.svg">
+    <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/finalproject/contact.html">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Riverbend Trails">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="styles/site.css">
     <script src="scripts/main.js" defer></script>
   </head>
