--- a/finalproject/trails.html
+++ b/finalproject/trails.html
@@ -7,6 +7,20 @@
     <meta name="description" content="Explore trail data dynamically at Riverbend Trails.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Open Graph Meta for Facebook -->
+    <meta property="og:title" content="Riverbend Trails">
+    <meta property="og:description" content="Explore trail data dynamically at Riverbend Trails.">
+    <meta property="og:image" content="https://ikechukwukelvin.github.io/wdd231/finalproject/images/logo.svg">
+    <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/finalproject/trails.html">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Riverbend Trails">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="/finalproject/styles/site.css">
     <script src="/finalproject/scripts/trails.js" type="module" defer></script>
   </head>
@@ -19,7 +33,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="trails.html" class="active">Trails</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
     </header>
