--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <h1>Riverbend Trails</h1>
+      <div class="logo">Riverbend Trails</div>
       <nav>
         <button id="menuToggle">☰</button>
         <ul id="navMenu">
@@ -37,10 +37,12 @@
       </nav>
     </header>
     <main>
-      <h2>Contact Us</h2>
+      <h1>Contact Us</h1>
       <form action="form.html" method="GET">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" required>
+        <label for="Phone">Phone:</label>
+        <input type="tel" name="Phone" id="Phone" required>
         <label for="email">Email:</label>
         <input type="email" name="email" id="email" required>
         <label for="message">Message:</label>
