--- a/finalproject/trails.html
+++ b/finalproject/trails.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <h1>Riverbend Trails</h1>
+      <div class="logo">Riverbend Trails</div>
       <nav>
         <button id="menuToggle">☰</button>
         <ul id="navMenu">
@@ -38,7 +38,7 @@
     </header>
 
     <main>
-      <h2>Available Trails</h2>
+      <h1>Available Trails</h1>
       <section id="trailsContainer" class="grid"></section>
 
       <!-- Modal -->
