--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -40,38 +40,33 @@
     </header>
     <main>
       <h1>Welcome to Riverbend Trails</h1>
-          <p>Explore nature, hiking, and biking in Riverbend. Find detailed trail data, discover the best routes, and connect with us for updates.</p>
+      <p>Explore nature, hiking, and biking in Riverbend. Find detailed trail data, discover the best routes, and connect with us for updates.</p>
       <section>
         <div class="slider">
           <div class="slides">
             <!-- Slide 1 -->
             <div class="slide">
-              <img src="images/e-bike.jpg" alt="e-bike" loading="lazy" width="800" height="400">
+              <img src="/chamber/images/discover/e-bike.jpg" alt="e-bike" loading="lazy" width="300" height="150">
             </div>
             <!-- Slide 2 -->
             <div class="slide">
-              <img src="images/index/museum.png" alt="e-bike" loading="lazy" width="800" height="400">
+              <img src="/finalproject/images/e-bike2.jpg" alt="e-bike" loading="lazy" width="200" height="100">
             </div>
             <!-- Slide 3 -->
             <div class="slide">
-              <img src="images/index/gallery.png" alt="e-bike" loading="lazy" width="800" height="400">
+              <img src="/finalproject/images/index/e-bike3.jpg" alt="e-bike" loading="lazy" width="200" height="100">
             </div>
           </div>
         </div>
       </section>
       
       <section class="hero">
-        <h1>Find your next walk in Riverbend</h1>
+        <h2>Find your next walk in Riverbend</h2>
         <p>Curated trails, events, and outdoor tips for the local community.</p>
         <a class="cta" href="trails.html">Browse Trails</a>
       </section>
       <section id="index-grid" class="index-grid" aria-label="Places of interest">
-        <h2 id="highlights">Highlights</h2>
-        
-      </section>
-        <!-- Grid of cards laid out using grid-template-areas -->
-        <section id="index-grid" class="index-grid" aria-label="Places of interest">
-        <!-- Cards injected here by discover.js -->
+        <h2>Highlights</h2>
         </section>
     </main>
     <footer>
