--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -46,15 +46,15 @@
           <div class="slides">
             <!-- Slide 1 -->
             <div class="slide">
-              <img src="/chamber/images/discover/e-bike.jpg" alt="e-bike" loading="lazy" width="300" height="150">
+              <img src="/finalproject/images/index/e-bike.jpg" alt="e-bike" loading="lazy" width="300" height="150">
             </div>
             <!-- Slide 2 -->
             <div class="slide">
-              <img src="/finalproject/images/e-bike2.jpg" alt="e-bike" loading="lazy" width="200" height="100">
+              <img src="/finalproject/images/index/e-bike2.jpg" alt="biking" loading="lazy" width="200" height="100">
             </div>
             <!-- Slide 3 -->
             <div class="slide">
-              <img src="/finalproject/images/index/e-bike3.jpg" alt="e-bike" loading="lazy" width="200" height="100">
+              <img src="/finalproject/images/index/e-bike3.jpg" alt="e-biking" loading="lazy" width="200" height="100">
             </div>
           </div>
         </div>
