--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,9 +56,9 @@
       <section class="events">
         <h2>Upcoming Events</h2>
         <ul>
-            <li>🌐 Networking Breakfast – Sept 25</li>
-            <li>💼 Business Expo – Oct 12</li>
-            <li>🎄 Holiday Market – Dec 3</li>
+            <li>🌐 Networking Breakfast - Sept 25</li>
+            <li>💼 Business Expo - Oct 12</li>
+            <li>🎄 Holiday Market - Dec 3</li>
         </ul>
       </section>
       <section class="weather">
