--- a/finalproject/trails.html
+++ b/finalproject/trails.html
@@ -6,7 +6,8 @@
     <title>Riverbend Trails — Trails</title>
     <meta name="description" content="Explore trail data dynamically at Riverbend Trails.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="finalproject/images/favicon.ico" type="image/x-icon">
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Trails">
     <meta property="og:description" content="Explore trail data dynamically at Riverbend Trails.">
