--- a/finalproject/attribution.html
+++ b/finalproject/attribution.html
@@ -6,7 +6,9 @@
     <title>Riverbend Trails — Attributions</title>
     <meta name="description" content="Attributions and credits for resources used on the Riverbend Trails website.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="/finalproject/images/favicon.ico" type="image/x-icon">
+    
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Trails contact">
     <meta property="og:description" content="Contact Riverbend Trails for questions or feedback.">
