--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -6,7 +6,10 @@
     <title>Riverbend Trails — Contact</title>
     <meta name="description" content="Contact Riverbend Trails for questions or feedback.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <!-- Favicon -->
+    <link rel="icon" href="/finalproject/images/favicon.ico" type="image/x-icon">
+    
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Trails contact">
     <meta property="og:description" content="Contact Riverbend Trails for questions or feedback.">
