--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -6,7 +6,10 @@
     <title>Riverbend Trails — Home</title>
     <meta name="description" content="Discover hiking and biking trails in Riverbend Trails.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
+
+    <!-- Favicon -->
     <link rel="icon" href="/finalproject/images/favicon.ico" type="image/x-icon">
+
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Trails Home">
     <meta property="og:description" content="Find hiking and biking trails in Riverbend Trails.">
