--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -49,15 +49,15 @@
           <div class="slides">
             <!-- Slide 1 -->
             <div class="slide">
-              <img src="chamber/images/discover/e-bike.jpg" alt="e-bike" loading="lazy" width="300" height="150">
+              <img src="images/discover/e-bike.jpg" alt="e-bike" loading="lazy" width="300" height="150">
             </div>
             <!-- Slide 2 -->
             <div class="slide">
-              <img src="chamber/images/discover/e-bike2.jpg" alt="e-bike2" loading="lazy" width="200" height="100">
+              <img src="images/index/" alt="e-bike2" loading="lazy" width="200" height="100">
             </div>
             <!-- Slide 3 -->
             <div class="slide">
-              <img src="chamber/images/discover/e-bike3.jpg" alt="e-bike3" loading="lazy" width="200" height="100">
+              <img src="images/index/" alt="e-bike3" loading="lazy" width="200" height="100">
             </div>
           </div>
         </div>
