--- a/finalproject/form.html
+++ b/finalproject/form.html
@@ -44,9 +44,9 @@
       <nav>
         <button id="menuToggle">☰</button>
         <ul id="navMenu">
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="trails.html">Trails</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </nav>
     </header>
