--- a/finalproject/trails.html
+++ b/finalproject/trails.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Explore trail data dynamically at Riverbend Trails.">
     <meta name="author" content="Ikechukwu Kelvin Chichi">
     <!-- Favicon -->
-    <link rel="icon" href="finalproject/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Trails">
     <meta property="og:description" content="Explore trail data dynamically at Riverbend Trails.">
@@ -22,8 +22,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="finalproject/styles/site.css">
-    <script src="finalproject/scripts/trails.js" type="module" defer></script>
+    <link rel="stylesheet" href="styles/site.css">
+    <script src="scripts/trails.js" type="module" defer></script>
   </head>
   <body>
     <header>
