--- a/finalproject/trails.html
+++ b/finalproject/trails.html
@@ -24,6 +24,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/site.css">
     <script src="scripts/trails.js" type="module" defer></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
     <header>
