--- a/finalproject/form.html
+++ b/finalproject/form.html
@@ -39,7 +39,7 @@
     </script>
   </head>
   <body>
-    header>
+    <header>
       <div class="logo">Riverbend Trails</div>
       <nav>
         <button id="menuToggle">☰</button>
@@ -57,7 +57,7 @@
     <footer>
       <p>&copy; <span id="year"></span> Riverbend Trails | Ikechukwu Kelvin Chichi | WDD 231</p>
       <p id="lastModified"></p>
-      <p><a href="attributions.html">Attributions</a> | <a href="https://youtube.com/yourvideo" target="_blank">Project Video</a></p>
+      <p><a href="attributions.html">Attributions</a> | <a href="https://youtu.be/Ikl0cdx364E" target="_blank">Project Video</a></p>
     </footer>
   </body>
 </html>
