--- a/finalproject/trails.html
+++ b/finalproject/trails.html
@@ -55,7 +55,7 @@
     <footer>
       <p>&copy; <span id="year"></span> Riverbend Trails | Ikechukwu Kelvin Chichi</p>
       <p id="lastModified"></p>
-      <p><a href="attributions.html">Attributions</a> | <a href="https://youtube.com/yourvideo" target="_blank">Project Video</a></p>
+      <p><a href="attributions.html">Attributions</a> | <a href="https://youtu.be/Ikl0cdx364E" target="_blank">Project Video</a></p>
     </footer>
   </body>
 </html>
