--- a/finalproject/attribution.html
+++ b/finalproject/attribution.html
@@ -66,7 +66,7 @@
     <footer>
       <p>&copy; <span id="year"></span> Riverbend Trails | Ikechukwu Kelvin Chichi</p>
       <p id="lastModified"></p>
-      <p><a href="https://youtube.com/yourvideo" target="_blank">Project Video</a></p>
+      <p><a href="https://youtu.be/Ikl0cdx364E" target="_blank">FinalProject Video</a></p>
     </footer>
   </body>
 </html>
